# syn68k

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.common.in  NEWS  README  TODO  TODO.variables  autogen.sh  configure.ac
config/: Makefile.common.alpha  Makefile.common.alpha.orig  Makefile.common.i386-msdos-go32  Makefile.common.i386-next-mach-o.dynamic  Makefile.common.i386-next-mach-o.static  Makefile.common.i386-pc-mingw32  Makefile.common.i486-cygwin32  Makefile.common.i486-cygwin32.debug  Makefile.common.i486-linux-a.out  Makefile.common.i486-linux-a.out-debug  Makefile.common.i486-linux-elf  Makefile.common.i486-linux-elf-nonnative  Makefile.common.i486-linux-elf.debug  Makefile.common.i486-linux-glibc  Makefile.common.i486-linux-glibc-ccr8  Makefile.common.i486-linux-glibc-debug  Makefile.common.i486-linux-glibc-nonnative  Makefile.common.i486-linux-glibc-slowccr  Makefile.common.i486-linux-slam  Makefile.common.i486-new-cygwin32  Makefile.common.i486-new-cygwin32.debug  Makefile.common.i486-next-ns3  Makefile.common.i586-cygwin32  Makefile.common.i586-cygwin32.debug  Makefile.common.i860  Makefile.common.m68k-next-ns3  Makefile.common.powerpc-linux-glibc  Makefile.common.powerpc-linux-glibc-debug
include/: .gitignore  safe_alloca.h  syn68k_private.h.in  syn68k_public.h
profile/: .gitignore  Makefile.am  amode.c  frequency.c  main.c  makebucket.c  readprofile.c
profile/include/: amode.h  bucket.h  frequency.h  readprofile.h
runtime/: .gitignore  68k.defines.scm  68k.scm  Makefile.am  TODO  alloc.c  backpatch.c  block.c  blockinfo.c  callback.c  checksum.c  deathqueue.c  destroyblock.c  diagnostics.c  dosinterrupts.c  fold.pl  hash.c  i486-cleanup.pl  i486-optimize.pl  init.c  interrupt.c  native.c  opcode_dummy.c  profile.c  rangetree.c  recompile.c  reg  sched.pl  syn68k_header.c  translate.c  trap.c  x86_recog.pl
runtime/include/: alloc.h  backpatch.h  block.h  blockinfo.h  callback.h  ccfuncs.h  checksum.h  deathqueue.h  destroyblock.h  diagnostics.h  hash.h  interrupt.h  mapping.h  native.h  profile.h  rangetree.h  recompile.h  translate.h  trap.h
runtime/native/i386/: .gitignore  Makefile.am  analyze.c  host-native.c  host-native.h  i386-aux.c  i386-aux.h  i386-isa.h  main.c  process.c  process.h  template.c  template.h  xlate-aux.c  xlate-aux.h  xlate.c  xlate.h  xlatemain.c  xlatetable.c
runtime/native/null/: Makefile
syngen/: .gitignore  CAVEATS  Makefile.am  SYNOP_LAYOUT  TODO  bitstring.c  boolean.c  byteorder.c  defopcode.c  error.c  generatecode.c  hash.c  list.c  macro.c  main.c  parse.c  reduce.c  test.scm  token.c  uniquestring.c
syngen/include/: bitstring.h  boolean.h  byteorder.h  common.h  defopcode.h  error.h  generatecode.h  hash.h  list.h  macro.h  parse.h  reduce.h  token.h  tokenlist.h  uniquestring.h
test/: .gdbinit  .gitignore  68k.out.1000  Makefile.am  TODO  alpha-redhat-linux.1.cc.new  alpha-redhat-linux.10.noncc  callemulator.s  ccr8.1  crc.c  diff4  driver.c  dump-i486-linux-100-cc  dump-nonnative-100-noncc  freq  glibc.1  glibc.10  glibc.100  glibc.1000  glibc.10000  glibc.16  glibc.200  glibc.250  glibc.32  glibc.4  glibc.64.intermeidate_source_notnative  glibc.64.latest_notnative  glibc.64.new  glibc.64.new_test_notnative  glibc.64.newer_define_notnative  glibc.64.noncc  glibc.8  i486-linux-elf-debug.1.noncc  i486-linux-elf-debug.1000.noncc  main.c  maketestbattery.pl  new  new.1000  new.noncc.1000  newest.10000  (+12 more)
test/include/: callemulator.h  crc.h  driver.h  run68k.h  setup.h  testbattery.h  testqsort.h  testrt.h  testtrap.h
test/output/: 10000  10000-noncc-notnative  68k.noncc.1000  README  syngentest-notnative
